# MotionCube

./: .gitignore  CMakeLists.txt  LICENSE  MotionCubeArduino.cpp  MotionCubeDesktop.cpp  README.md
Arduino/: MotionCubeArduino.cpp  platformio.ini
Arduino/src/: main.cpp
Desktop/: .gitignore  CMakeLists.txt
Desktop/cmake/: SDL2ConfigBackup.cmake
Desktop/lib/: CMakeLists.txt
Desktop/share/MotionCube/: fragment.glsl  vertex.glsl
Desktop/src/: CMakeLists.txt  MotionCube.cpp  MotionCubeDesktop.cpp  MySDL.cpp  MySDL.hpp  TestData.cpp
MotionCubeArduino/src/: main.cpp  test.cpp
MotionCubeDesktop/: .gitignore  CMakeLists.txt
MotionCubeDesktop/src/: CMakeLists.txt  MotionCubeDesktop.cpp  TestData.cpp
